fixed sign up form spacing and added loading bar,api connectivity needed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ body {
 
 .progress-b span {
     display: inline-block;
-    height: 20px;
+    height: 23px;
     width: 0%;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
